// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-schema [default renderer] 1`] = `
<div
  className="schema mapper-element undefined"
>
  <div
    className="schema-header undefined"
  >
    <div
      className="schema-name undefined"
    >
      Empty schema
    </div>
  </div>
  <div
    className="separator horizontal"
  />
  <div
    className="schema-content"
    onScroll={[Function]}
  />
</div>
`;

exports[`empty-schema [list renderer] 1`] = `
<div
  className="schema mapper-element undefined"
>
  <div
    className="schema-header undefined"
  >
    <div
      className="schema-name undefined"
    >
      Empty schema
    </div>
  </div>
  <div
    className="separator horizontal"
  />
  <div
    className="comp-list schema-content undefined"
    onScroll={[Function]}
  />
</div>
`;

exports[`single-schema [default renderer] 1`] = `
<div
  className="schema mapper-element undefined"
>
  <div
    className="schema-header undefined"
  >
    <div
      className="schema-name undefined"
    >
      Schema
    </div>
  </div>
  <div
    className="separator horizontal"
  />
  <div
    className="schema-content"
    onScroll={[Function]}
  >
    <div
      className="schema-element undefined"
      onClick={[Function]}
      onDoubleClick={[Function]}
      role="button"
    >
      element 1
    </div>
    <div
      className="schema-element undefined"
      onClick={[Function]}
      onDoubleClick={[Function]}
      role="button"
    >
      element 2
    </div>
    <div
      className="schema-element undefined"
      onClick={[Function]}
      onDoubleClick={[Function]}
      role="button"
    >
      element 3
    </div>
  </div>
</div>
`;

exports[`single-schema [list renderer] 1`] = `
<div
  className="schema mapper-element undefined"
>
  <div
    className="schema-header undefined"
  >
    <div
      className="schema-name undefined"
    >
      Schema
    </div>
  </div>
  <div
    className="separator horizontal"
  />
  <div
    className="comp-list schema-content undefined"
    onScroll={[Function]}
  >
    <div
      className="comp-list-row schema-element"
      data-id="elem_1-undefined"
      onClick={[Function]}
      onDoubleClick={[Function]}
    >
      <div
        className="comp-list-row-data mandatory-field comp-list-row-data-name undefined"
      >
        <div
          className="mandatory-field-label"
        >
          element 1
        </div>
        <div
          className="mandatory-field-info"
        >
          
        </div>
      </div>
      <div
        className="comp-list-row-data row-label comp-list-row-data-type undefined"
      >
        string
      </div>
      <div
        className="comp-list-row-data row-label comp-list-row-data-desc undefined"
      >
        bla bla bla
      </div>
    </div>
    <div
      className="comp-list-row schema-element"
      data-id="elem_2-undefined"
      onClick={[Function]}
      onDoubleClick={[Function]}
    >
      <div
        className="comp-list-row-data mandatory-field comp-list-row-data-name undefined"
      >
        <div
          className="mandatory-field-label"
        >
          element 2
        </div>
        <div
          className="mandatory-field-info"
        >
          
        </div>
      </div>
      <div
        className="comp-list-row-data row-label comp-list-row-data-type undefined"
      >
        string
      </div>
      <div
        className="comp-list-row-data row-label comp-list-row-data-desc undefined"
      >
        bla bla bla
      </div>
    </div>
    <div
      className="comp-list-row schema-element"
      data-id="elem_3-undefined"
      onClick={[Function]}
      onDoubleClick={[Function]}
    >
      <div
        className="comp-list-row-data mandatory-field comp-list-row-data-name undefined"
      >
        <div
          className="mandatory-field-label"
        >
          element 3
        </div>
        <div
          className="mandatory-field-info"
        >
          
        </div>
      </div>
      <div
        className="comp-list-row-data row-label comp-list-row-data-type undefined"
      >
        string
      </div>
      <div
        className="comp-list-row-data row-label comp-list-row-data-desc undefined"
      >
        bla bla bla
      </div>
    </div>
  </div>
</div>
`;
